--- a/app/src/main/res/layout/activity_step1.xml
+++ b/app/src/main/res/layout/activity_step1.xml
@@ -77,20 +77,20 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginStart="0dp"
                     android:layout_marginLeft="0dp"
-                    android:src="@drawable/goals"></ImageView>
+                    android:src="@drawable/ste1"></ImageView>
 
                 <RelativeLayout
                     android:id="@+id/txxt"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:layout_below="@+id/goals"
-                    android:background="@drawable/tyr"
+                    android:background="@drawable/sett"
                    >
                     <TextView
                         android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Set The Goal"
+                        android:text="The problem"
                         android:textSize="35dp"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/montserrat"
@@ -155,7 +155,7 @@
         android:id="@+id/down"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/concept"
+        android:background="@drawable/cbackk"
         android:layout_alignParentBottom="true">
 
 
@@ -175,7 +175,7 @@
             android:textStyle="bold"
             android:visibility="visible"
             android:textSize="25dp"
-            android:textColor="#0B1A6E"
+            android:textColor="#000000"
             android:layout_centerInParent="true"></TextView>
 
     </RelativeLayout>
