--- a/app/src/main/res/layout/activity_step3.xml
+++ b/app/src/main/res/layout/activity_step3.xml
@@ -90,7 +90,7 @@
                         android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Reframing"
+                        android:text="The desired future"
                         android:textSize="35dp"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/montserrat"
@@ -155,7 +155,7 @@
         android:id="@+id/down"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/concept"
+        android:background="@drawable/cbackk"
         android:layout_alignParentBottom="true">
 
 
