--- a/app/src/main/res/layout/activity_step4.xml
+++ b/app/src/main/res/layout/activity_step4.xml
@@ -78,22 +78,20 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginStart="0dp"
                     android:layout_marginLeft="0dp"
-                    android:layout_marginTop="20dp"
-                    android:src="@drawable/insight"></ImageView>
+                    android:src="@drawable/eathie"></ImageView>
 
                 <RelativeLayout
                     android:id="@+id/txxt"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginTop="10dp"
                     android:layout_below="@+id/goals"
-                    android:background="@drawable/tyr"
+                    android:background="@drawable/sett"
                     >
                     <TextView
                         android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Insight"
+                        android:text="Empathy"
                         android:textSize="35dp"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/montserrat"
@@ -107,7 +105,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/goals"
-                    android:layout_marginTop="70dp"
+                    android:layout_marginTop="65dp"
                     android:background="@color/colorWhite">
                     <Button
                         android:id="@+id/instructions"
@@ -158,7 +156,7 @@
         android:id="@+id/down"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/concept"
+        android:background="@drawable/cbackk"
         android:layout_alignParentBottom="true">
 
 
