--- a/app/src/main/res/layout/activity_step5.xml
+++ b/app/src/main/res/layout/activity_step5.xml
@@ -1,184 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Steps.Step5Activity">
+
+
+
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Steps.Step5Activity">
+        android:layout_above="@id/down"
+        android:background="@color/colorWhite"
+        >
 
-
-
-
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/down"
-            android:background="@color/colorWhite"
-            >
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:id="@+id/Relative1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp">
+
+                <ImageView
+                    android:id="@+id/bar"
+                    android:layout_width="32dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/im1"></ImageView>
+
+                <TextView
+                    android:id="@+id/tx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toRightOf="@+id/bar"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Step Four "
+                    android:textAlignment="center"
+                    android:textSize="20dp"
+                    android:textStyle="bold"></TextView>
+
+                <TextView
+                    android:id="@+id/txx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tx"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_toRightOf="@+id/bar"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Follow the instructions and discuss with your teammates to get a brilliant final decision"
+                    android:textSize="15dp"
+                    android:textStyle="normal"></TextView>
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_below="@id/Relative1">
+
+                <ImageView
+                    android:id="@+id/goals"
+                    android:layout_width="match_parent"
+                    android:layout_height="283dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="0dp"
+                    android:src="@drawable/insightt"></ImageView>
 
                 <RelativeLayout
-                    android:id="@+id/Relative1"
+                    android:id="@+id/txxt"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp">
+                    android:layout_below="@+id/goals"
+                    android:layout_marginTop="5dp"
 
-                    <ImageView
-                        android:id="@+id/bar"
-                        android:layout_width="32dp"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/im1"></ImageView>
-
+                    android:background="@drawable/sett"
+                    >
                     <TextView
-                        android:id="@+id/tx"
+                        android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_toRightOf="@+id/bar"
+                        android:text="Insights"
+                        android:textSize="35dp"
+                        android:layout_marginTop="5dp"
                         android:fontFamily="@font/montserrat"
-                        android:text="Step Five "
-                        android:textAlignment="center"
-                        android:textSize="20dp"
-                        android:textStyle="bold"></TextView>
-
-                    <TextView
-                        android:id="@+id/txx"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tx"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="1dp"
-                        android:layout_toRightOf="@+id/bar"
-                        android:fontFamily="@font/montserrat"
-                        android:text="Follow the instructions and discuss with your teammates to get a brilliant final decision"
-                        android:textSize="15dp"
-                        android:textStyle="normal"></TextView>
+                        android:textColor="#FFFFFF"
+                        android:layout_centerHorizontal="true"
+                        ></TextView>
 
                 </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_below="@id/Relative1">
-
-                    <ImageView
-                        android:id="@+id/goals"
-                        android:layout_width="match_parent"
-                        android:layout_height="283dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginLeft="0dp"
-                        android:src="@drawable/eez"></ImageView>
-
-                    <RelativeLayout
-                        android:id="@+id/txxt"
-                        android:layout_width="match_parent"
-                        android:layout_height="80dp"
-                        android:layout_below="@+id/goals"
-                        android:background="@drawable/sett"
-                        >
-                        <TextView
-                            android:id="@+id/title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Point Of view"
-                            android:textSize="35dp"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/montserrat"
-                            android:textColor="#FFFFFF"
-                            android:layout_centerHorizontal="true"
-                            ></TextView>
-
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@+id/goals"
-                        android:layout_marginTop="60dp"
-                        android:background="@color/colorWhite">
-                        <Button
-                            android:id="@+id/instructions"
-                            android:layout_width="380dp"
-                            android:layout_height="60dp"
-                            android:background="@drawable/cornerbutton3"
-                            android:fontFamily="@font/montserrat"
-                            android:text="Instructions"
-                            android:textColor="#003366"
-                            android:layout_marginTop="45dp"
-                            android:layout_centerHorizontal="true"
-                            android:textStyle="bold"/>
-                        <Button
-                            android:id="@+id/Disscussion"
-                            android:layout_width="380dp"
-                            android:layout_height="60dp"
-                            android:background="@drawable/cornerbutton3"
-                            android:fontFamily="@font/montserrat"
-                            android:text="Disscussion"
-                            android:textColor="#003366"
-                            android:layout_below="@+id/instructions"
-                            android:layout_marginTop="30dp"
-                            android:layout_centerHorizontal="true"
-                            android:textStyle="bold"/>
-                        <Button
-                            android:id="@+id/Final"
-                            android:layout_width="380dp"
-                            android:layout_height="60dp"
-                            android:background="@drawable/cornerbutton3"
-                            android:fontFamily="@font/montserrat"
-                            android:text="Final Decision"
-                            android:textColor="#003366"
-                            android:layout_below="@+id/Disscussion"
-                            android:layout_marginTop="30dp"
-                            android:layout_centerHorizontal="true"
-                            android:textStyle="bold"/>
-                    </RelativeLayout>
-
+                    android:layout_below="@+id/goals"
+                    android:layout_marginTop="70dp"
+                    android:background="@color/colorWhite">
+                    <Button
+                        android:id="@+id/instructions"
+                        android:layout_width="380dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/cornerbutton3"
+                        android:fontFamily="@font/montserrat"
+                        android:text="Instructions"
+                        android:textColor="#003366"
+                        android:layout_marginTop="45dp"
+                        android:layout_centerHorizontal="true"
+                        android:textStyle="bold"/>
+                    <Button
+                        android:id="@+id/Disscussion"
+                        android:layout_width="380dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/cornerbutton3"
+                        android:fontFamily="@font/montserrat"
+                        android:text="Disscussion"
+                        android:textColor="#003366"
+                        android:layout_below="@+id/instructions"
+                        android:layout_marginTop="30dp"
+                        android:layout_centerHorizontal="true"
+                        android:textStyle="bold"/>
+                    <Button
+                        android:id="@+id/Final"
+                        android:layout_width="380dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/cornerbutton3"
+                        android:fontFamily="@font/montserrat"
+                        android:text="Final Decision"
+                        android:textColor="#003366"
+                        android:layout_below="@+id/Disscussion"
+                        android:layout_marginTop="30dp"
+                        android:layout_centerHorizontal="true"
+                        android:textStyle="bold"/>
                 </RelativeLayout>
-
 
             </RelativeLayout>
 
 
-        </ScrollView>
-
-        <RelativeLayout
-            android:id="@+id/down"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@drawable/concept"
-            android:layout_alignParentBottom="true">
-
-
-            <ImageView
-                android:id="@+id/redo_btn"
-                android:layout_width="50dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_redo_black_24dp"
-                android:layout_alignParentEnd="true"></ImageView>
-
-            <TextView
-                android:id="@+id/tii"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="60:00"
-                android:fontFamily="@font/montserrat"
-                android:textStyle="bold"
-                android:visibility="visible"
-                android:textSize="25dp"
-                android:textColor="#0B1A6E"
-                android:layout_centerInParent="true"></TextView>
-
         </RelativeLayout>
 
+
+    </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/down"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/cbackk"
+        android:layout_alignParentBottom="true">
+
+
+        <ImageView
+            android:id="@+id/redo_btn"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_redo_black_24dp"
+            android:layout_alignParentEnd="true"></ImageView>
+
+        <TextView
+            android:id="@+id/tii"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="60:00"
+            android:fontFamily="@font/montserrat"
+            android:textStyle="bold"
+            android:visibility="visible"
+            android:textSize="25dp"
+            android:textColor="#0B1A6E"
+            android:layout_centerInParent="true"></TextView>
+
     </RelativeLayout>
+
+</RelativeLayout>
