--- a/app/src/main/res/layout/activity_step7.xml
+++ b/app/src/main/res/layout/activity_step7.xml
@@ -77,13 +77,15 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginStart="0dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="0dp"
-                    android:src="@drawable/eez"></ImageView>
+                    android:src="@drawable/proposal"></ImageView>
 
                 <RelativeLayout
                     android:id="@+id/txxt"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
+                    android:layout_marginTop="20dp"
                     android:layout_below="@+id/goals"
                     android:background="@drawable/sett"
                     >
@@ -91,7 +93,7 @@
                         android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="STEP 7"
+                        android:text="Proposals"
                         android:textSize="35dp"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/montserrat"
@@ -105,7 +107,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/goals"
-                    android:layout_marginTop="60dp"
+                    android:layout_marginTop="80dp"
                     android:background="@color/colorWhite">
                     <Button
                         android:id="@+id/instructions"
@@ -156,7 +158,7 @@
         android:id="@+id/down"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/concept"
+        android:background="@drawable/cbackk"
         android:layout_alignParentBottom="true">
 
 
