--- a/app/src/main/res/layout/row_groupchat_left.xml
+++ b/app/src/main/res/layout/row_groupchat_left.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="100dp"
     android:layout_marginTop="10dp"
+    android:orientation="vertical"
     android:padding="10dp"
     android:background="@drawable/bt_blanc"
     >
@@ -17,7 +18,7 @@
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
-        android:layout_marginStart="5dp"></TextView>
+        android:layout_marginStart="0dp"></TextView>
     <TextView
         android:id="@+id/messageTv"
         android:layout_width="wrap_content"
@@ -25,18 +26,25 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="the Message"
-        android:layout_below="@+id/NameTv"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/black_color"></TextView>
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/userphoto"
+        android:id="@+id/image_discussion"
+        ></ImageView>
+
     <TextView
         android:id="@+id/timetv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:text="Time"
+        android:textAlignment="textEnd"
         android:fontFamily="@font/montserrat"
-        android:layout_below="@+id/messageTv"
         android:textSize="12sp"
         android:layout_marginEnd="5dp"></TextView>
 
-</RelativeLayout>
+</LinearLayout>
