--- a/app/src/main/res/layout/row_groupchat_right.xml
+++ b/app/src/main/res/layout/row_groupchat_right.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bt_blanc2"
     android:layout_marginStart="100dp"
     android:layout_marginTop="10dp"
+    android:orientation="vertical"
     android:padding="10dp"
     >
     <TextView
@@ -27,14 +28,23 @@
         android:layout_below="@+id/NameTv"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/black_color"></TextView>
+
+    <ImageView
+        android:id="@+id/image_discussion"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/userphoto"
+        ></ImageView>
+
     <TextView
         android:id="@+id/timetv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:text="Time"
+        android:textAlignment="textEnd"
         android:fontFamily="@font/montserrat"
-        android:layout_below="@+id/messageTv"
         android:textSize="12sp"
         android:layout_marginEnd="5dp"></TextView>
-</RelativeLayout>
+
+</LinearLayout>
