--- a/app/src/main/res/layout/item_brain.xml
+++ b/app/src/main/res/layout/item_brain.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/colorWhite"
     android:layout_height="wrap_content"
    >
     
@@ -29,9 +30,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/user_TV"
             android:layout_gravity="center_vertical"
-            android:textSize="18dp"
-            android:textStyle="bold"
-
+            android:textSize="16dp"
             android:fontFamily="@font/montserrat"
             android:text="Dhouibi Muhamed "></TextView>
             
