--- a/app/src/main/res/layout/item_brain.xml
+++ b/app/src/main/res/layout/item_brain.xml
@@ -120,7 +120,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Hac ita persuasione reducti intra moenia bellatores obseratis undique portarum aditibus, propugnaculis insistebant et pinnis, congesta undique saxa telaque habentes in promptu, ut si quis se proripuisset interius, multitudine missilium sterneretur et lapidum."
+                    android:text="Hac ita persuasione reducti intra intraintraintraintraintraintraintramoenia bellatores obseratis undique portarum aditibus, propugnaculis insistebant et pinnis, congesta undique saxa telaque habentes in promptu, ut si quis se proripuisset interius, multitudine missilium sterneretur et lapidum."
                     android:textColor="@color/black_color"
                     android:textSize="18dp"></TextView>
             </ScrollView>
@@ -221,7 +221,8 @@
                 android:layout_marginStart="4dp"
                 android:layout_weight="1"
                 android:background="@null"
-                android:hint="Start Typing..."
+                android:hint="Type your comment..."
+                android:textSize="15dp"
                 android:inputType="textCapSentences|textImeMultiLine"></EditText>
 
             <ImageButton
