--- a/app/src/main/res/layout/activity_gloabl_brain_storming.xml
+++ b/app/src/main/res/layout/activity_gloabl_brain_storming.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
 
-    tools:context=".GloablBrainStorming">
+    tools:context=".GlobalBrainstorming.GloablBrainStorming">
     <RelativeLayout
         android:layout_below="@+id/me"
         android:id="@+id/Relative1"
