--- a/app/src/main/res/layout/activity_step1.xml
+++ b/app/src/main/res/layout/activity_step1.xml
@@ -154,29 +154,30 @@
     <RelativeLayout
         android:id="@+id/down"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/cbackk"
-        android:layout_alignParentBottom="true">
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/concept">
 
 
         <ImageView
             android:id="@+id/redo_btn"
             android:layout_width="50dp"
             android:layout_height="60dp"
-            android:src="@drawable/ic_redo_black_24dp"
-            android:layout_alignParentEnd="true"></ImageView>
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_redo_black_24dp"></ImageView>
 
         <TextView
             android:id="@+id/tii"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="60:00"
+            android:layout_centerInParent="true"
             android:fontFamily="@font/montserrat"
-            android:textStyle="bold"
-            android:visibility="visible"
-            android:textSize="25dp"
+            android:text="60:00"
             android:textColor="#000000"
-            android:layout_centerInParent="true"></TextView>
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:visibility="visible"></TextView>
 
     </RelativeLayout>
 
