--- a/app/src/main/res/layout/activity_step7.xml
+++ b/app/src/main/res/layout/activity_step7.xml
@@ -157,8 +157,8 @@
     <RelativeLayout
         android:id="@+id/down"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/cbackk"
+        android:layout_height="50dp"
+        android:background="@drawable/concept"
         android:layout_alignParentBottom="true">
 
 
