--- a/app/src/main/res/layout/activity_yes_no_qst.xml
+++ b/app/src/main/res/layout/activity_yes_no_qst.xml
@@ -12,7 +12,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_nav"
+        android:layout_above="@id/confff"
         android:background="#F3F2F2"
         >
 
@@ -77,22 +77,7 @@
 
                     ></androidx.recyclerview.widget.RecyclerView>
 
-                <Button
-                    android:id="@+id/confff"
-                    android:text="Submit"
-                    android:layout_below="@+id/listgames"
-                    android:layout_centerHorizontal="true"
-                    android:layout_width="250dp"
-                    android:layout_marginTop="35dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cornerbutton2"
-                    android:fontFamily="@font/montserrat"
-                    android:layout_marginBottom="15dp"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textAllCaps="false"
-                    android:textColor="#585B5E">
-                </Button>
+
             </RelativeLayout>
 
 
@@ -102,11 +87,22 @@
 
         </RelativeLayout>
 
-
-
-
     </ScrollView>
 
+    <Button
+        android:id="@+id/confff"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_nav"
+        android:layout_below="@+id/listgames"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/cornerbutton2"
+        android:fontFamily="@font/montserrat"
+        android:text="Submit"
+        android:textAllCaps="false"
+        android:textColor="#585B5E"
+        android:textSize="20dp"
+        android:textStyle="bold"></Button>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
