--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -2,11 +2,17 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/cornerbutton36"
+    android:layout_marginEnd="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="10dp"
+
+    >
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="60dp"
         android:layout_marginStart="5dp"
 
         android:id="@+id/Cophoto"
@@ -19,7 +25,7 @@
         android:layout_marginStart="5dp"
         android:layout_toRightOf="@+id/Cophoto"
         android:layout_marginTop="2dp"
-        android:textSize="15dp"
+        android:textSize="17dp"
         android:textColor="#010E50"
         android:fontFamily="@font/montserrat"
         android:text="UserName"></TextView>
@@ -33,7 +39,7 @@
         android:layout_toRightOf="@+id/Cophoto"
         android:layout_below="@+id/comment_user"
         android:layout_marginTop="2dp"
-        android:textSize="15dp"
+        android:textSize="17dp"
         android:textColor="#040922"
         android:fontFamily="@font/montserrat"
         android:text="View All comments"></TextView>
