--- a/app/src/main/res/layout/create_game_popup.xml
+++ b/app/src/main/res/layout/create_game_popup.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_alignParentTop="true"
-            android:background="@drawable/za">
+            android:background="@drawable/concept">
             <ImageView
                 android:id="@+id/close"
                 android:layout_width="wrap_content"
